--- a/rca/static_src/sass/components/_form.scss
+++ b/rca/static_src/sass/components/_form.scss
@@ -12,4 +12,12 @@
         color: $color--white;
         background-color: $color--tertiary;
     }
+
+    &__heading {
+        margin-bottom: $gutter;
+
+        @include media-query(large) {
+            margin-bottom: ($gutter * 1.5);
+        }
+    }
 }
