--- a/rca/project_styleguide/templates/patterns/pages/forms/form_page--example.html
+++ b/rca/project_styleguide/templates/patterns/pages/forms/form_page--example.html
@@ -1,6 +1,10 @@
 {% extends "patterns/base_page.html" %}
 {% load wagtailcore_tags wagtailimages_tags util_tags static %}
 
+{% block body_class %}
+    app--form
+{% endblock %}
+
 {% block content %}
 
 <div class="page page--no-hero">
