--- a/rca/project_styleguide/templates/patterns/pages/forms/form_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/forms/form_page.html
@@ -32,8 +32,8 @@
 
         <section class="section section--start bg bg--dark">
             {% if page.form_fields %}
-                <form action="{% pageurl page %}" method="post" class="form">
-                    <div class="form__container">
+                <form action="{% pageurl page %}" method="post" class="form grid layout">
+                    <div class="form__container layout__start-one layout__@large-start-two layout__span-two layout__@large-span-three">
                         {% csrf_token %}
 
                         {% if form.errors %}
@@ -46,25 +46,28 @@
 
                             {% with widget_type=field|widget_type field_type=field|field_type %}
                                 <div class="form-item {% if field_type %}form-item--{{ field_type }}{% endif %} {% if widget_type %}form-item--{{ widget_type }}{% endif %} {% if field.errors %}form-item--errors{% endif %}">
+                                    <div class="form-item__container">
 
-                                    {% if field.errors %}
-                                        <div class="form-item__errors">
-                                            {{ field.errors }}
-                                        </div>
-                                    {% endif %}
+                                        {% if field.errors %}
+                                            <div class="form-item__errors">
+                                                {{ field.errors }}
+                                            </div>
+                                        {% endif %}
 
-                                    {% if widget_type == 'checkbox_input' %}
-                                        <label for="{{ field.id_for_label }}" class="form-item__label {% if field.field.required %}required{% endif %}">{{ field.label }} {% if field.field.required %}<span class="form-item__required">*</span>{% endif %}</label>
-                                        {{ field }}
-                                        {% if field.help_text %}<div class="form-item__help">{{ field.help_text }}</div>{% endif %}
-                                    {% else %}
-                                        <label for="{{ field.id_for_label }}" class="form-item__label {% if field.field.required %}required{% endif %}">{{ field.label }} {% if field.field.required %}<span class="form-item__required">*</span>{% endif %}</label>
+                                        {% if widget_type == 'checkbox_input' %}
+                                            <label for="{{ field.id_for_label }}" class="form-item__label {% if field.field.required %}required{% endif %}">{{ field.label }} {% if field.field.required %}<span class="form-item__required">*</span>{% endif %}</label>
+                                            {{ field }}
+                                            
+                                        {% else %}
+                                            <label for="{{ field.id_for_label }}" class="form-item__label {% if field.field.required %}required{% endif %}">{{ field.label }} {% if field.field.required %}<span class="form-item__required">*</span>{% endif %}</label>
+                                            {% if widget_type == 'date_input' or widget_type == 'date_time_input' %}<div class="{{ widget_type }}">{% endif %}
+                                            {{ field }}
+                                            {% if widget_type == 'date_input' or widget_type == 'date_time_input' %}</div>{% endif %}
+                                        {% endif %}
 
-                                        {% if widget_type == 'date_input' or widget_type == 'date_time_input' %}<div class="{{ widget_type }}">{% endif %}
-                                        {{ field }}
-                                        {% if widget_type == 'date_input' or widget_type == 'date_time_input' %}</div>{% endif %}
-                                        <div class="form-item__help">{% if field.help_text %}{{ field.help_text }}{% endif %}</div>
-                                    {% endif %}
+                                    </div>
+
+                                    {% if field.help_text %}<div class="form-item__help">{{ field.help_text }}</div>{% endif %}
 
                                 </div>
                             {% endwith %}
