Adding key details to form page

--- a/rca/project_styleguide/templates/patterns/atoms/form-file/form-file.html
+++ b/rca/project_styleguide/templates/patterns/atoms/form-file/form-file.html
@@ -1,4 +1,4 @@
-<div class="form-item form-item--input form-item--file {% if field.errors %}form-item--errors{% endif %} {% if field.help_text %}form-item--has-help-text{% endif %}">
+<div class="form-item form-item--file {% if field.errors %}form-item--errors{% endif %} {% if field.help_text %}form-item--has-help-text{% endif %}">
     <div class="form-item__container">
 
         {% if field.errors %}
