--- a/rca/project_styleguide/templates/patterns/pages/forms/form_page--example.html
+++ b/rca/project_styleguide/templates/patterns/pages/forms/form_page--example.html
@@ -30,10 +30,13 @@
 
     <div class="page__content">
 
-        <section class="section section--start bg bg--dark">
+        <section class="section bg bg--dark">
                 <form method="post" class="form grid layout">
+                    <div class="layout__start-one layout__span-two layout__@large-span-one">
+                        {% include "patterns/molecules/key-details/key-details--form.html" with key_details=page.key_details %}
+                    </div>
                     <div class="form__container layout__start-one layout__@large-start-two layout__span-two layout__@large-span-three">
-                        <div class="form__content section">
+                        <div class="form__content section section--top-space-large">
                             <div class="section__row section__row--last-small">
                                 <h2 class="form__heading heading heading--four">Inputs</h2>
                                 {% include "patterns/atoms/form-input/form-input.html" %}
