Introduction no-margin modifier

--- a/rca/static_src/sass/components/_introduction.scss
+++ b/rca/static_src/sass/components/_introduction.scss
@@ -4,6 +4,10 @@
 
     &__text {
         margin-bottom: ($gutter * 2);
+
+        &--no-margin {
+            margin-bottom: 0;
+        }
     }
 
     .section__row & {
