--- a/rca/project_styleguide/templates/patterns/pages/forms/form_page--example.html
+++ b/rca/project_styleguide/templates/patterns/pages/forms/form_page--example.html
@@ -21,7 +21,7 @@
         {% endif %}
         {% if page.introduction %}
         <div class="introduction grid">
-            <p class="introduction__text section__heading heading heading--five">
+            <p class="introduction__text introduction__text--no-margin section__heading heading heading--five">
                 {{ page.introduction }}
             </p>
         </div>
