Moving stick compensator into it’s own class

--- a/rca/static_src/sass/base/_base.scss
+++ b/rca/static_src/sass/base/_base.scss
@@ -17,15 +17,18 @@ html {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     scroll-behavior: smooth;
-    // height of header to ensure validation messages aren't hidden behind sticky header
-    scroll-padding-top: 120px;
-
-    @include media-query(large) {
-        scroll-padding-top: 130px;
-    }
 
     @media (prefers-reduced-motion: reduce) {
         scroll-behavior: auto;
+    }
+
+    &.sticky-compensator {
+        // height of header to ensure validation messages aren't hidden behind sticky header
+        scroll-padding-top: 120px;
+
+        @include media-query(large) {
+            scroll-padding-top: 130px;
+        }
     }
 }
 
