--- a/rca/project_styleguide/templates/patterns/pages/forms/form_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/forms/form_page.html
@@ -5,6 +5,8 @@
     app--form
 {% endblock %}
 
+{% block html_class %}sticky-compensator{% endblock %}
+
 {% block content %}
 
 <div class="page page--no-hero">
