Submit button width limited to two columns on large bp

--- a/rca/static_src/sass/components/_form.scss
+++ b/rca/static_src/sass/components/_form.scss
@@ -20,4 +20,10 @@
             margin-bottom: ($gutter * 1.5);
         }
     }
+
+    &__action {
+        @include media-query(large) {
+            width: 66.66%;
+        }
+    }
 }
