Match template variables to avoid fixing yaml

--- a/rca/project_styleguide/templates/patterns/pages/schools/schools.html
+++ b/rca/project_styleguide/templates/patterns/pages/schools/schools.html
@@ -274,7 +274,7 @@
                         {% endif %}
                     </div>
                     <div class="section__content">
-                        {% include "patterns/organisms/people-module/people-module.html" with people=related_staff title=False %}
+                        {% include "patterns/organisms/people-module/people-module.html" with people=staff title=False %}
                     </div>
                 </div>
 
