--- a/rca/project_styleguide/templates/patterns/pages/schools/schools.html
+++ b/rca/project_styleguide/templates/patterns/pages/schools/schools.html
@@ -283,23 +283,22 @@
             </section>
 
             {# Contact #}
-            {% if page.contact %}
-                <section class="section bg bg--light">
-                    <div class="section__notch section__notch--small-med-only">
-                        <div class="section__notch-fill section__notch-fill--second-col"></div>
-                    </div>
-                    <div class="contact-anchor anchor-heading" id="contact" ></div>
-                    <div class="section__row section__row--first">
-                        {% include "patterns/organisms/contact/contact.html" with heading="Contact us" text="Get in touch if you’d like to find out more or have any questions about working with the RCA." image=page.contact_image %}
-                    </div>
-                </section>
+            <section class="section bg bg--light">
+                <div class="section__notch section__notch--small-med-only">
+                    <div class="section__notch-fill section__notch-fill--second-col"></div>
+                </div>
+                <div class="contact-anchor anchor-heading" id="contact" ></div>
+                <div class="section__row section__row--first">
+                                {% include "patterns/organisms/contact/contact.html" with heading=page.contact_model_title text=page.contact_model_text image=page.contact_model_image %}
+                </div>
+            </section>
 
-                <section class="section bg bg--dark">
-                    <div class="section__notch">
-                        <div class="section__notch-fill section__notch-fill--third-col"></div>
-                    </div>
-                </section>
-            {% endif %}
+            <section class="section bg bg--dark">
+                <div class="section__notch">
+                    <div class="section__notch-fill section__notch-fill--third-col"></div>
+                </div>
+            </section>
+
 
         </div>
 
