Checkbox and radio options

--- a/rca/project_styleguide/templates/patterns/pages/forms/form_page--example.html
+++ b/rca/project_styleguide/templates/patterns/pages/forms/form_page--example.html
@@ -88,6 +88,13 @@
                                 {% include "patterns/atoms/form-radio/form-radio--required.html" %}    
                                 {% include "patterns/atoms/form-radio/form-radio--help.html" %} 
                             </div>
+                            <div class="section__row section__row--last-small">
+                                <h2 class="form__heading heading heading--four">Single Checkbox</h2>
+                                {% include "patterns/atoms/form-checkbox-single/form-checkbox-single.html" %}
+                                {% include "patterns/atoms/form-checkbox-single/form-checkbox-single--error.html" %}
+                                {% include "patterns/atoms/form-checkbox-single/form-checkbox-single--required.html" %}    
+                                {% include "patterns/atoms/form-checkbox-single/form-checkbox-single--help.html" %} 
+                            </div>
                         </div>
                         <div class="form__action">
                             {% include "patterns/atoms/exceptional-cta/exceptional-cta.html" with text="Send your enquiry" button=True %} 
