--- a/rca/project_styleguide/templates/patterns/atoms/form-checkbox/form-checkbox.html
+++ b/rca/project_styleguide/templates/patterns/atoms/form-checkbox/form-checkbox.html
@@ -1,12 +1,17 @@
-<div class="form-item form-item--checkbox {% if field.errors %}form-item--errors{% endif %} {% if field.help_text %}form-item--has-help-text{% endif %}">
+<div class="form-item form-item--checkbox_select_multiple {% if field.errors %}form-item--errors{% endif %} {% if field.help_text %}form-item--has-help-text{% endif %}">
     <div class="form-item__container">
 
-        <input class="form-item__checkbox" type="checkbox" id="{{ field.id_for_label }}" {% if field.field.required %}required{% endif %}>
+        <ul>
+            <li>
+                <label for="{{ field.id_for_label }}" class="form-item__label">
+                    {{ field.label }}
+                    {% if field.field.required %}<span class="form-item__required">*</span>{% endif %}
+                    <input class="form-item__checkbox" type="checkbox" id="{{ field.id_for_label }}" {% if field.field.required %}required{% endif %}>
+                </label>
+            </li>
+        </ul>
 
-        <label for="{{ field.id_for_label }}" class="form-item__label">
-            {{ field.label }}
-            {% if field.field.required %}<span class="form-item__required">*</span>{% endif %}
-        </label>
+        
 
     </div>
 
