--- a/rca/project_styleguide/templates/patterns/atoms/form-textarea/form-textarea.html
+++ b/rca/project_styleguide/templates/patterns/atoms/form-textarea/form-textarea.html
@@ -1,12 +1,12 @@
 <div class="form-item form-item--input form-item--textarea {% if field.errors %}form-item--errors{% endif %} {% if field.help_text %}form-item--has-help-text{% endif %}">
-    <div class="form-item__container">
+    <div class="form-item__container" data-focus>
 
         <label for="{{ field.id_for_label }}" class="form-item__label">
             {{ field.label }}
             {% if field.field.required %}<span class="form-item__required">*</span>{% endif %}
         </label>
 
-        <textarea class="form-item__input form-item__textarea" name="" id="{{ field.id_for_label }}" {% if field.field.required %}required{% endif %} data-focus></textarea>
+        <textarea class="form-item__input form-item__textarea" name="" id="{{ field.id_for_label }}" {% if field.field.required %}required{% endif %}></textarea>
 
     </div>
 
