--- a/rca/project_styleguide/templates/patterns/pages/forms/form_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/forms/form_page.html
@@ -62,12 +62,13 @@
                                                     {{ field.errors }}
                                                 </div>
                                             {% endif %}
-
+                                            
                                             {% if widget_type == 'checkbox_input' %}
                                                 {{ field }}
                                                 <label for="{{ field.id_for_label }}" class="form-item__label {% if field.field.required %}required{% endif %}">{{ field.label }} {% if field.field.required %} <span class="form-item__required">*</span>{% endif %}</label>
                                             {% else %}
                                                 <label for="{{ field.id_for_label }}" class="form-item__label {% if field.field.required %}required{% endif %}">{{ field.label }} {% if field.field.required %} <span class="form-item__required">*</span>{% endif %}</label>
+                                                {% if widget_type == 'checkbox_select_multiple'%}<p class="form-item__instruction">Select all that apply</p>{% endif %}
                                                 {% if widget_type == 'date_input' or widget_type == 'date_time_input' %}<div class="{{ widget_type }}">{% endif %}
                                                 {{ field }}
                                                 {% if widget_type == 'date_input' or widget_type == 'date_time_input' %}</div>{% endif %}
