Updating example forms

--- a/rca/project_styleguide/templates/patterns/atoms/form-tel/form-tel.html
+++ b/rca/project_styleguide/templates/patterns/atoms/form-tel/form-tel.html
@@ -1,5 +1,5 @@
-<div class="form-item form-item--input form-item--tel {% if field.errors %}form-item--errors{% endif %} {% if field.help_text %}form-item--has-help-text{% endif %}">
-    <div class="form-item__container" data-focus>
+<div class="form-item form-item--input form-item--tel {% if field.errors %}form-item--errors{% endif %} {% if field.help_text %}form-item--has-help-text{% endif %}" data-focus data-focustype="input">
+    <div class="form-item__container">
 
         {% if field.errors %}
             <div class="form-item__errors">
