--- a/rca/project_styleguide/templates/patterns/atoms/form-textarea/form-textarea.html
+++ b/rca/project_styleguide/templates/patterns/atoms/form-textarea/form-textarea.html
@@ -1,5 +1,5 @@
-<div class="form-item form-item--input form-item--textarea {% if field.errors %}form-item--errors{% endif %} {% if field.help_text %}form-item--has-help-text{% endif %}">
-    <div class="form-item__container" data-focus>
+<div class="form-item form-item--input form-item--textarea {% if field.errors %}form-item--errors{% endif %} {% if field.help_text %}form-item--has-help-text{% endif %}" data-focus data-focustype="textarea">
+    <div class="form-item__container">
 
         <label for="{{ field.id_for_label }}" class="form-item__label">
             {{ field.label }}
