--- a/rca/static_src/sass/components/_form-item.scss
+++ b/rca/static_src/sass/components/_form-item.scss
@@ -175,7 +175,7 @@
 
     &--select,
     &--textarea,
-    &--radio,
+    &--radio_select,
     &--checkbox {
         &#{$root}--errors {
             #{$root}__container {
