--- a/rca/project_styleguide/templates/patterns/atoms/form-radio/form-radio.html
+++ b/rca/project_styleguide/templates/patterns/atoms/form-radio/form-radio.html
@@ -1,12 +1,14 @@
-<div class="form-item form-item--radio {% if field.errors %}form-item--errors{% endif %} {% if field.help_text %}form-item--has-help-text{% endif %}">
+<div class="form-item form-item--radio_select {% if field.errors %}form-item--errors{% endif %} {% if field.help_text %}form-item--has-help-text{% endif %}">
     <div class="form-item__container">
-
-        <input class="form-item__radio" type="radio" id="{{ field.id_for_label }}" {% if field.field.required %}required{% endif %}>
-
-        <label for="{{ field.id_for_label }}" class="form-item__label">
-            {{ field.label }}
-            {% if field.field.required %}<span class="form-item__required">*</span>{% endif %}
-        </label>
+        <ul>
+            <li>
+                <label for="{{ field.id_for_label }}" class="form-item__label">
+                    <input class="form-item__radio" type="radio" id="{{ field.id_for_label }}" {% if field.field.required %}required{% endif %}>
+                    {{ field.label }}
+                    {% if field.field.required %}<span class="form-item__required">*</span>{% endif %}
+                </label>
+            </li>
+        </ul>
 
     </div>
 
