--- a/rca/project_styleguide/templates/patterns/pages/forms/form_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/forms/form_page.html
@@ -51,18 +51,18 @@
                             {% for field in form %}
 
                                 {% with widget_type=field|widget_type field_type=field|field_type %}
-                                    <div class="form-item {% if field_type %}form-item--{{ field_type }}{% endif %} {% if widget_type %}form-item--{{ widget_type }}{% endif %} {% if field.errors %}form-item--errors{% endif %} {% if field.help_text %}form-item--has-help-text{% endif %}">
-                                        <div class="form-item__container" 
-                                        {% if field_type == 'char_field' or field_type == 'email_field' or field_type == 'decimal_field' or field_type == 'url_field' or field_type == 'date_field' or field_type == 'date_time_field' %}
-                                            data-focus
-                                        {% endif %}>
-
+                                    <div class="form-item {% if field_type %}form-item--{{ field_type }}{% endif %} {% if widget_type %}form-item--{{ widget_type }}{% endif %} {% if field.errors %}form-item--errors{% endif %} {% if field.help_text %}form-item--has-help-text{% endif %}" {% if widget_type == 'text_input' or field_type == 'email_field' or field_type == 'decimal_field' or field_type == 'url_field' or field_type == 'date_field' or field_type == 'date_time_field' %}
+                                    data-focus data-focustype='input'
+                                {% endif %}{% if widget_type == 'textarea' %}
+                                data-focus data-focustype='textarea'
+                            {% endif %}>
+                                        <div class="form-item__container">
                                             {% if field.errors %}
                                                 <div class="form-item__errors">
                                                     {{ field.errors }}
                                                 </div>
                                             {% endif %}
-                                            
+
                                             {% if widget_type == 'checkbox_input' %}
                                                 {{ field }}
                                                 <label for="{{ field.id_for_label }}" class="form-item__label {% if field.field.required %}required{% endif %}">{{ field.label }} {% if field.field.required %} <span class="form-item__required">*</span>{% endif %}</label>
