--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--schools.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--schools.html
@@ -28,15 +28,11 @@
     </div>
     {% endif %}
 
-    {% if page.next_open_day_start_date %}
+    {% if page.next_open_day_date %}
     <div class="key-details__section key-details__section--date">
         <h3 class="body body--two key-details__sub-heading">Next open day</h3>
         <ul class="key-details__list">
-            {% if page.next_open_day_end_date and page.next_open_day_start_date %}
-            <li class="key-details__list-item">{{ page.next_open_day_start_date|date:'d' }} - {{ page.next_open_day_end_date|date:'d F' }}</li>
-            {% elif page.next_open_day_start_date %}
-            <li class="key-details__list-item">{{ page.next_open_day_start_date|date:'d m Y' }}</li>
-            {% endif %}
+            <li class="key-details__list-item">{{ page.next_open_day_date|date:'d M Y' }}</li>
             {% if open_day_link %}
             <li class="key-details__list-item">
                 <a class="key-details__link link link--secondary link--link" href="{{ open_day_link.get_link_url }}">
